# ais_floss

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  large_gpu.yaml  medium_gpu.yaml
scripts/: evaluate.py  evaluate_comprehensive.py  train.py  train_simple.py
src/data/: ais_generator.py  channel_model.py  collision_generator.py
src/models/: decoder.py  encoder.py  floss_ais.py  flow_matching.py
src/training/: trainer.py
src/utils/: metrics.py
